--- a/notes-app-api/serverless.yml
+++ b/notes-app-api/serverless.yml
@@ -1,32 +1,41 @@
-# NOTE: update this with your service name
-service: notes-app-api
-
-# Create an optimized package for our functions 
+ service: notes-app-api
+# Create an optimized package for our functions
 package:
   individually: true
-
 plugins:
   - serverless-bundle # Package our functions with Webpack
   - serverless-offline
   - serverless-dotenv-plugin # Load .env as environment variables
-
 provider:
   name: aws
-  runtime: nodejs10.x
-  stage: dev
+  runtime: nodejs12.x
+  stage: prod
   region: us-east-1
-  # To load environment variables externally
-  # rename env.example to .env and uncomment
-  # the following line. Also, make sure to not
-  # commit your .env.
-  #
-  #environment:
-  #  SAMPLE_ENV_VAR: ${env:SAMPLE_ENV_VAR}
-
+environment:
+    tableName: notes
+iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:us-east-1:*:*"
 functions:
-  hello:
-    handler: handler.hello
+# Defines an HTTP API endpoint that calls the main function in create.js
+  # - path: url path is /notes
+  # - method: POST request
+  # - cors: enabled CORS (Cross-Origin Resource Sharing) for browser cross
+# domain api call
+# - authorizer: authenticate using the AWS IAM role 
+create:
+    handler: create.main
     events:
       - http:
-          path: hello
-          method: get
+          path: notes
+          method: post
+          cors: true
+          authorizer: aws_iam
